# Vehicle-Classification

./: .gitignore  EDA.md  README.md  README_ivan.md  Stanford_Car_Dataset_by_classes_folder.ipynb  backend.Dockerfile  car_classification_check6_v8.ipynb  car_classification_test_with_ex_new.ipynb  checkpoints.md  checkpoints_ivan.md  compose.yaml  dataset.md  dataset_ivan.md  frontend.Dockerfile  model_review  pyproject.toml  stanford_cars_with_class_names.csv
BASELINE/: baseline.md  car_classification_test.ipynb  car_classification_test_with_ex.ipynb  yearly_project_BASELINE_remote.ipynb
BASELINE/BASELINE_3/: baseline_3.md
BASELINE/BASELINE_3/exp1_fasterrcnn/: fasterrcnn_ivan_1.ipynb
BASELINE/BASELINE_3/exp1_yolov5/: yolov5_ivan_1.ipynb
BASELINE/BASELINE_5/: baseline_5.md
BASELINE/BASELINE_6/: baseline_6.md
BASELINE/BASELINE_6/exp3_yolov5/: yolov5_ivan_3.ipynb
BASELINE/logs/continue_learn_/: events.out.tfevents.1733587238.LAPTOP-JF13PSNH.1600.1
BASELINE/logs/experiment_resnet18/: events.out.tfevents.1733582151.LAPTOP-JF13PSNH.1600.0
BASELINE/utils/: baseline_utils.py  data_utils.py
BASELINE/yolov5:runs:train:exp/: events.out.tfevents.1733948157.9c9ba194496b.1139.0  opt.yaml  results.csv
BASELINE/yolov5:runs:train:exp2/: ML_HW_2.ipynb  events.out.tfevents.1735556305.3d1593d571d7.1352.0  opt.yaml  results.csv
BASELINE/yolov5:runs:train:exp3/: events.out.tfevents.1735722877.8ea98a06d875.2301.0  opt.yaml  results.csv
BOT/: bot.py  bot_deploy.py  bot_simple.py  server.py  server_deploy.py
EDA/: EDA.md  EDA_nikolay.ipynb  dataset.md  eda_ivan.ipynb  eda_utils.py  yearly_project_DP_EDA_remote.ipynb  yearly_project_DP_EDA_remote_ivan.ipynb
api/: app.py
api/v1/: api_route.py
frontend/: Dockerfile  streamlit_app.py
models/baseline/: baseline.md  best_checkpoint.pt  car_classification_test.ipynb  car_classification_test_with_ex.ipynb  fine_tuning.py  inference.py  model.py  posttraining.py  train.py
models/experiments/: car_classification_check6_v8.ipynb  car_classification_test_with_ex_new.ipynb
models/feedback/: model_review.md
