[tool.poetry]
name = "vehicle-classification"
version = "0.1.0"
description = ""
authors = ["Nikolay Nyunin <nikolay.nyunin@gmail.com>"]
readme = "README.md"
packages = [{include = "vehicle_classification"}]

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
tqdm = "^4.66.6"
matplotlib = "^3.9.2"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
torch = "^2.5.1"
opencv-python = "^4.10.0.84"
albumentations = "^1.4.24"
torchmetrics = "^1.6.1"
torchvision = "^0.20.1"
scikit-learn = "^1.6.0"
python-multipart = "^0.0.20"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
