[tool.poetry]
name = "vehicle-classification"
version = "0.1.0"
description = "Vehicle classification and detection project"
authors = ["Nikolay Nyunin <nikolay.nyunin@gmail.com>"]
readme = "README.md"
packages = [{include = "vehicle_classification"}]

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = {version = "20.7", extras = ["ext"]}
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
torch = "^2.3.1"
torchvision = "^0.18.1"
opencv-python = "^4.8.1"
Pillow = "^10.1.0"
requests = "^2.31.0"
httpx = "^0.25.2"
python-dotenv = "^0.21.0"
PyYAML = "^6.0.1"
matplotlib = "^3.8.2"
numpy = "^1.26.4"
pandas = "^2.1.4"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
